'Reset to Default Value' on Current Area Type button causes crash #36830

Closed
opened 2013-09-27 20:56:50 +02:00 by Haig Petrus · 10 comments

%%%--- Operating System, Graphics card ---
Ubuntu 13.04 and all variants; Centos 6.4; Fedora 19; OS X 10.8.5

- Blender version with error, and version that worked ---

2.68a with error
Can't confirm before that version.

- Short description of error ---

Whenever and (so far) where ever you right click on the header Area Type button and select 'Reset to Default Value', Blender crashes. This has been the case across all GNU/Linux flavours, as well as current versions of OS X.

The error at the command line is: Segmentation fault (core dumped).

I've attached the blender.crash.txt generated by Blender.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Open Blender, with or without a project open
  2. Change layout to anything other than Default
  3. Right click on any header current area button and choose 'Reset to Default Value'
  4. In a moment - OPA!
  5. Crash.

%%%

%%%--- Operating System, Graphics card --- Ubuntu 13.04 and all variants; Centos 6.4; Fedora 19; OS X 10.8.5 - Blender version with error, and version that worked --- 2.68a with error Can't confirm before that version. - Short description of error --- Whenever and (so far) where ever you right click on the header Area Type button and select 'Reset to Default Value', Blender crashes. This has been the case across all GNU/Linux flavours, as well as current versions of OS X. The error at the command line is: Segmentation fault (core dumped). I've attached the blender.crash.txt generated by Blender. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1) Open Blender, with or without a project open 2) Change layout to anything other than Default 3) Right click on any header current area button and choose 'Reset to Default Value' 4) In a moment - OPA! 5) Crash. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%I've also attached the blender.crash.txt from CentOS 6.4, as well.%%%

%%%I've also attached the blender.crash.txt from CentOS 6.4, as well.%%%

%%%Cannot confirm this with current trunk, could you please test with a recent build from http://builder.blender.org/download?%%%

%%%Cannot confirm this with current trunk, could you please test with a recent build from http://builder.blender.org/download?%%%

%%%Confirmed on Windows x64 with latest SVN.
I changed to "Compositing" layout, and did the "Reset to Default" on the Node Editor editor type button. %%%

%%%Confirmed on Windows x64 with latest SVN. I changed to "Compositing" layout, and did the "Reset to Default" on the Node Editor editor type button. %%%
Author

%%%Confirmed on my end on OS X, Ubuntu variants and CentOS 6.4 with the recent trunk builds.%%%

%%%Confirmed on my end on OS X, Ubuntu variants and CentOS 6.4 with the recent trunk builds.%%%

%%%Ah, yes, did not understand it was only the editor type button… So confirmed as well. :/%%%

%%%Ah, yes, did not understand it was only the editor type button… So confirmed as well. :/%%%

%%%Devnote: ED_render_scene_update gets a NULL pointer as RegionView3D (ar->regiondata), which should never happen afaik... Too late here to dig more, will try to settle this down tomorrow.

Suspect something with ED_area_newspace (at least, get the print warning from BKE_regiontype_from_id), wonder why only from that reset stuff though.%%%

%%%Devnote: ED_render_scene_update gets a NULL pointer as RegionView3D (ar->regiondata), which should never happen afaik... Too late here to dig more, will try to settle this down tomorrow. Suspect something with ED_area_newspace (at least, get the print warning from BKE_regiontype_from_id), wonder why only from that reset stuff though.%%%
Author

%%%I've never looked at the code behind the 2.5+ GUI. This is the perfect opportunity to do so. Do you guys stick with C/C++ all the way through your dev work, or do you solve problems and prototype in Python first? I'd like to stick to your current workflow, as much as possible.%%%

%%%I've never looked at the code behind the 2.5+ GUI. This is the perfect opportunity to do so. Do you guys stick with C/C++ all the way through your dev work, or do you solve problems and prototype in Python first? I'd like to stick to your current workflow, as much as possible.%%%

%%%Fixed in r60420, thanks for the report! :)%%%

%%%Fixed in r60420, thanks for the report! :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36830
No description provided.