Fix [#36830] 'Reset to Default Value' on Current Area Type button causes crash

Default default value for space types (0, i.e. SPACE_EMPTY) is not valid, use SPACE_VIEW3D instead.